@@ -66,6 +66,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23247: Fix a crash in the StreamWriter.reset() of CJK codecs.
+
 - Issue #18622: unittest.mock.mock_open().reset_mock would recurse infinitely.
   Patch from Nicola Palumbo and Laurent De Buyst.
 
